--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://Akihi2021.github.io/tblog
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
